--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "uuid": "~1.4.1",
     "coinbase": "~0.1.2",
     "debug": "~1.0.4",
-    "crypto-js": "~3.1.2-5"
+    "crypto-js": "~3.1.2-5",
+    "requirejs": "~2.1.15"
   },
   "scripts": {
     "start": "node server.js --use_strict"
