--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "CBuffer": "~0.1.4",
     "async": "~0.8.0",
     "better-assert": "^1.0.0",
-    "bitcoinjs-lib": "git+https://github.com/bitcoinjs/bitcoinjs-lib.git#490b34852d307519af6ffb370e07dfd828891b28",
+    "bitcoinjs-lib": "^1.1.1",
     "body-parser": "~1.3.1",
     "compression": "^1.0.8",
     "cookie-parser": "^1.3.2",
