--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "coinbase": "~0.1.2",
     "debug": "~1.0.4",
     "crypto-js": "~3.1.2-5",
-    "requirejs": "~2.1.15"
+    "requirejs": "~2.1.15",
+    "async-cache": "~0.1.5"
   },
   "scripts": {
     "start": "node server.js --use_strict"
