--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
   "dependencies": {
     "CBuffer": "~0.1.4",
     "async": "~0.8.0",
+    "async-cache": "~0.1.5",
     "better-assert": "^1.0.0",
+    "bitcoin": "^2.2.0",
     "bitcoinjs-lib": "^1.1.1",
     "body-parser": "~1.3.1",
     "compression": "^1.0.8",
     "cookie-parser": "^1.3.2",
+    "crypto-js": "~3.1.2-5",
     "crypto-rand": "0.0.2",
+    "debug": "~1.0.4",
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
     "lodash": "^2.4.1",
     "nodemailer": "~0.6.5",
     "password-hash": "^1.2.2",
     "pg": "~3.3.0",
+    "qr-image": "2.0.x",
     "request": "^2.36.0",
-    "timeago": "^0.1.0",
-    "uuid": "~1.4.1",
-    "coinbase": "~0.1.2",
-    "debug": "~1.0.4",
-    "crypto-js": "~3.1.2-5",
     "requirejs": "~2.1.15",
-    "async-cache": "~0.1.5",
     "speakeasy": "1.0.x",
-    "qr-image": "2.0.x"
+    "timeago": "^0.1.0",
+    "uuid": "~1.4.1"
   },
   "scripts": {
     "start": "node server.js --use_strict"
