--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "node": "~0.10.26"
   },
   "dependencies": {
-    "CBuffer": "~0.1.4",
     "async": "~0.8.0",
     "async-cache": "~0.1.5",
     "better-assert": "^1.0.0",
@@ -19,7 +18,6 @@
     "debug": "~1.0.4",
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
-    "lodash": "^2.4.1",
     "nodemailer": "~0.6.5",
     "password-hash": "^1.2.2",
     "pg": "~3.3.0",
@@ -27,6 +25,7 @@
     "request": "^2.36.0",
     "requirejs": "~2.1.15",
     "speakeasy": "1.0.x",
+    "lodash": "~2.4.1",
     "timeago": "^0.1.0",
     "uuid": "~1.4.1"
   },
