--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "debug": "~1.0.4",
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
-    "nodemailer": "~0.6.5",
+    "lodash": "~2.4.1",
+    "nodemailer": "^1.3.0",
+    "nodemailer-ses-transport": "^1.2.0",
     "password-hash": "^1.2.2",
     "pg": "~3.3.0",
     "qr-image": "2.0.x",
     "request": "^2.36.0",
     "requirejs": "~2.1.15",
     "speakeasy": "1.0.x",
-    "lodash": "~2.4.1",
     "timeago": "^0.1.0",
     "uuid": "~1.4.1"
   },
