Mobile improvements on New View

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 
   "scripts": {
     "start-dev": "env $(cat .env | xargs) nodemon src/server/index",
+    "start-dev-new":"NEW_VIEW=yes env $(cat .env | xargs) nodemon src/server/index" ,
     "start": "node src/server/index"
   }
 }
