--- a/package.json
+++ b/package.json
@@ -35,6 +35,18 @@
     "start": "node src/server/index"
   },
   "devDependencies": {
-    "curlrequest": "^0.5.2"
+    "curlrequest": "^0.5.2",
+    "del": "^1.2.0",
+    "event-stream": "^3.3.1",
+    "gulp": "^3.9.0",
+    "gulp-extend": "^0.2.0",
+    "gulp-hash": "^2.0.4",
+    "gulp-minify-css": "^1.1.5",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.3",
+    "merge-stream": "^0.1.7",
+    "requirejs": "^2.1.18",
+    "run-sequence": "^1.1.0",
+    "vinyl-paths": "^1.0.0"
   }
 }
