--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "merge-stream": "^0.1.7",
+    "mousetrap": "^1.5.2",
     "react": "^0.13.3",
     "run-sequence": "^1.1.0",
     "seedrandom": "^2.4.0",
