--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mousetrap": "^1.5.2",
     "react": "^0.13.3",
     "run-sequence": "^1.1.0",
+    "screenfull": "^2.0.0",
     "seedrandom": "^2.4.0",
     "socket.io-client": "^1.3.5",
     "vinyl-paths": "^1.0.0"
