--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node src/server/index"
   },
   "dependencies": {
+    "CBuffer": "^1.1.0",
     "async": "~0.8.0",
     "better-assert": "^1.0.0",
     "bitcoin": "^2.2.0",
@@ -21,7 +22,7 @@
     "debug": "~1.0.4",
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
-    "lodash": "~2.4.1",
+    "lodash": "^3.10.0",
     "nodemailer": "^1.3.0",
     "nodemailer-ses-transport": "^1.2.0",
     "password-hash": "^1.2.2",
@@ -29,6 +30,8 @@
     "qr-image": "2.0.x",
     "request": "^2.36.0",
     "requirejs": "~2.1.15",
+    "socket.io": "^1.3.6",
+    "socket.io-cookie": "0.0.1",
     "speakeasy": "1.0.x",
     "timeago": "^0.1.0",
     "uuid": "~1.4.1"
