--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cookie-parser": "^1.3.2",
     "crypto-js": "~3.1.2-5",
     "crypto-rand": "0.0.2",
-    "debug": "~1.0.4",
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
     "lodash": "^3.10.0",
@@ -41,6 +40,7 @@
     "autolinker": "^0.17.1",
     "classnames": "^2.1.2",
     "curlrequest": "^0.5.2",
+    "debug": "^2.2.0",
     "del": "^1.2.0",
     "event-stream": "^3.3.1",
     "gulp": "^3.9.0",
