--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.3.2",
     "crypto-js": "~3.1.2-5",
     "crypto-rand": "0.0.2",
+    "debug": "^2.2.0",
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
     "lodash": "^3.10.0",
