--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
     "lodash": "^3.10.0",
+    "multiline": "^1.0.2",
     "nodemailer": "^1.3.0",
     "nodemailer-ses-transport": "^1.2.0",
     "password-hash": "^1.2.2",
