--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "CBuffer": "^1.1.0",
-    "async": "~0.8.0",
+    "async": "^1.4.0",
     "better-assert": "^1.0.0",
     "bitcoin": "^2.2.0",
     "bitcoinjs-lib": "^1.1.1",
