--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "crypto-rand": "0.0.2",
     "debug": "^2.2.0",
     "dot-emc": "~0.1.2",
-    "express": "~4.1.2",
+    "express": "^4.13.3",
     "lodash": "^3.10.0",
     "multiline": "^1.0.2",
     "nodemailer": "^1.3.0",
